feat: live shame feed with handle lookup and polished UI

--- a/env.example
+++ b/env.example
@@ -24,3 +24,6 @@ TWITTER_ACCESS_SECRET=your_twitter_access_secret_here
 
 # Farcaster Configuration (for future use)
 FARCASTER_API_KEY=your_farcaster_api_key_here
+
+# BankrBot Configuration (for future use)
+BANKRBOT_API_KEY=
