feat: Shame Live Feed and Leaderboard with FID reverse lookup

--- a/env.example
+++ b/env.example
@@ -16,14 +16,19 @@ DATABASE_URL=postgresql://username:password@localhost:5432/wankr_db
 ETHERSCAN_API_KEY=your_etherscan_api_key_here
 ALCHEMY_API_KEY=your_alchemy_api_key_here
 
-# Social Media Bot Configuration (for future use)
-TWITTER_API_KEY=your_twitter_api_key_here
-TWITTER_API_SECRET=your_twitter_api_secret_here
-TWITTER_ACCESS_TOKEN=your_twitter_access_token_here
-TWITTER_ACCESS_SECRET=your_twitter_access_secret_here
+# X (Twitter) API - for BankrBot post monitoring
+X_API_KEY=your_x_api_key_here
+X_API_KEY_SECRET=your_x_api_key_secret_here
+X_ACCESS_TOKEN=your_x_access_token_here
+X_ACCESS_SECRET=your_x_access_secret_here
+X_BEARER_TOKEN=your_x_bearer_token_here
 
-# Farcaster Configuration (for future use)
-FARCASTER_API_KEY=your_farcaster_api_key_here
+# Bankrbot Configuration (for future use)
+BANKRBOT_API_KEY=your_bankrbot_api_key_here
 
-# BankrBot Configuration (for future use)
-BANKRBOT_API_KEY=
+# Neynar API - for Farcaster handle resolution
+NEYNAR_API_KEY=your_neynar_api_key_here
+
+# Infura Configuration
+INFURA_MM_DEV_BASE_API_KEY=your_infura_api_key_here
+INFURA_RPC_URL=https://base-mainnet.infura.io/v3/your_infura_api_key_here
