--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
-    "ethers": "^6.15.0"
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "ethers": "^6.15.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
