fix dependencies to allow successful  build

--- a/env.example
+++ b/env.example
@@ -32,3 +32,8 @@ NEYNAR_API_KEY=your_neynar_api_key_here
 # Infura Configuration
 INFURA_MM_DEV_BASE_API_KEY=your_infura_api_key_here
 INFURA_RPC_URL=https://base-mainnet.infura.io/v3/your_infura_api_key_here
+
+DUNE_API_KEY=
+
+COINBASE_API_KEY=
+COINBASE_SECRET=
