--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,15 @@
-# Exclude build artifacts and dependencies
-.next/
-node_modules/
-.env*
+# Exclude everything except what's needed for frontend build
+*
+!frontend/
+!vercel.json
+!package.json
+!pnpm-workspace.yaml
 
-# Exclude unnecessary files
+# Exclude frontend build artifacts and dependencies
+frontend/.next/
+frontend/node_modules/
+frontend/.env*
+
+# Exclude other unnecessary files
 *.log
 .DS_Store
