--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "cd frontend && pnpm install && pnpm run build",
   "outputDirectory": "frontend/.next",
   "installCommand": "cd frontend && pnpm install",
-  "framework": "nextjs",
-  "packageManager": "pnpm@9.0.0"
+  "framework": "nextjs"
 }
